src/test/resources/model_test/invalid/FourEntities_model/Person.entity
Person {
	id : int {@Id}; // the id
	firstName : string {@SizeMax( 3)} ;
	lastName : string;
	birthDate : date ;
	country : Country[ 999]; 
	gender : Gender;
}
